--- a/play.html
+++ b/play.html
@@ -54,7 +54,7 @@
 
     <main class="flex flex-col items-center relative">
             <div id="level1" class="level-content w-screen h-screen absolute top-0 left-0" style="background-image: url('assets/lvl1_bg.png'); background-size: cover;">
-               <div class="w-3/5 max-w-3xl p-8 flex flex-col items-center text-center mt-8">
+               <div class="w-3/5 max-w-3xl p-8 flex flex-col items-center text-center my-8">
                 <h1 class="gregean_bush text-red-700 text-8xl rotate-[3.42deg]">HAUNTED HOUSE HANG UP</h1>
                 <span class="bg-yellow-200 rounded-lg flex items-center justify-center w-28 mb-4">
                     <p class='font-bold text-lg tracking-[0.1rem]'>Aura</p>
@@ -68,7 +68,7 @@
                </div>
             </div>
             <div id="level2" class="level-content hidden w-screen h-screen absolute top-0 left-0" style="background-image: url('assets/lvl2_bg.png'); background-size: cover;">
-               <div class="w-3/5 max-w-3xl p-8 flex flex-col items-center text-center mt-20">
+               <div class="w-3/5 max-w-3xl p-8 flex flex-col items-center text-center my-20">
                 <h1 class="gregean_bush text-red-700 text-8xl rotate-[-1.9deg]">COMING SOON!</h1>
                 <span class="bg-yellow-200 rounded-lg flex items-center justify-center w-28 mb-4">
                     <p class='font-bold text-lg tracking-[0.1rem]'>Aura</p>
@@ -82,7 +82,7 @@
                </div>
             </div>
             <div id="level3" class="level-content hidden w-screen h-screen absolute top-0 left-0" style="background-image: url('assets/lvl3_bg.png'); background-size: cover;">
-               <div class="w-3/5 max-w-3xl p-8 flex flex-col items-center text-center mt-20">
+               <div class="w-3/5 max-w-3xl p-8 flex flex-col items-center text-center my-20">
                 <h1 class="gregean_bush text-red-700 text-8xl tracking-[0.1rem] rotate-[-1.9deg]">COMING SOON!</h1>
                 <span class="bg-yellow-200 rounded-lg flex items-center justify-center w-28 mb-4">
                     <p class='font-bold text-lg'>Aura</p>
@@ -96,7 +96,7 @@
             </div>
     </main>
 
-    <div class="fixed bottom-1/2 left-2 translate-y-1/2 lg:-translate-y-0 lg:bottom-2 lg:left-1/2 transform lg:-translate-x-1/2 flex justify-between gap-20 z-10 flex-col lg:flex-row">
+    <div class="fixed right-8 bottom-1/2 translate-y-1/2 lg:bottom-36 lg:right-1/2 lg:translate-x-1/2 flex flex-col lg:flex-row justify-center lg:justify-between gap-8 lg:gap-20 z-10">
         <button onclick="showLevel('level1')" class="relative flex flex-col level-btn w-64 h-64 items-center justify-center" data-level="level1">
             <img src="assets/lvl1_inactive.png" alt="Level 1" class="inactive-img w-full h-full object-contain">
             <img src="assets/lvl1_active.png" alt="Level 1" class="active-img hidden w-full h-full object-contain">
